--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.security.user.name=user
 spring.security.user.password=user
 
+#secret
+api.security.token.secret=${PROJECT_SECRET:my-secret-key}
