--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=orders_manager
-spring.datasource.url=${PROJECT_DB}
-spring.datasource.username=root
-spring.datasource.password=${PROJECT_DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/orders_manager
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
