--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=orders_manager
-spring.datasource.url=jdbc:postgresql://localhost:5432/orders_manager
+spring.datasource.url=jdbc:postgresql://localhost:5432/stg_orders_manager
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
